Bug #17797
rmxattr on ceph.[dir|file].layout.pool_namespace doesn't work
% Done:
0%
Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
Currently it's obvious how to set the namespace but much less so how to clear it (i.e. revert to default namespace). Callers can achieve this awkwardly by doing a setxattr on ceph.[dir|file].layout including all the attributes except the namespace, but we should really make removexattr work too.
History
#1 Updated by John Spray about 6 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by John Spray about 6 years ago
- Status changed from Fix Under Review to Resolved