mds: enable rmxattr on pool_namespace attrs

So that a user has a natural way of undoing a setxattr
which set a pool_namespace.

Fixes: http://tracker.ceph.com/issues/17797
Signed-off-by: John Spray <john.spray@redhat.com>